@@ -2,6 +2,10 @@ Revision history for HTML-FromANSI-Tiny
 
 {{$NEXT}}
 
+  - Add 'inline_style' boolean to enable output using style=""
+    instead of class="".
+  - Add 'styles' attribute for overwriting style.
+
 0.100     2011-11-19T18:20:55Z
 
   - Initial release
